# AICLIIDE

./: ADVERSARIAL_DEEP_VERIFICATION.md  ADVERSARIAL_FINAL_VERIFICATION.md  ADVERSARIAL_FINDINGS.md  ADVERSARIAL_REFACTOR_VERIFICATION.md  ADVERSARIAL_REVIEW.md  ADVERSARIAL_REVIEW_EXPERT.md  ADVERSARIAL_TEST_RESULTS.md  ADVERSARIAL_VERIFICATION.md  ADVERSARY_RESPONSE.md  APPROACH_COMPARISON.md  BACKGROUND_LLM_IMPLEMENTATION_SUMMARY.md  BACKGROUND_PROCESSING_100_PERCENT.md  BACKGROUND_PROCESSING_COMPLETE.md  BACKGROUND_PROCESSING_DONE.md  BACKGROUND_PROCESSING_FINAL.md  BACKGROUND_PROCESSING_LOGGING.md  BACKGROUND_PROCESSING_STATUS.md  BACKGROUND_SESSION_DESIGN.md  BACKGROUND_SESSION_DESIGN_REVISED.md  BENCHMARKS_COMPLETE.md  BUILD_VERIFICATION.md  CACHE_IMPLEMENTATION.md  CACHE_IMPLEMENTATION_CHECKLIST.md  CARGO_QUICK_REFERENCE.md  CHAT_SYSTEM_ANALYSIS.md  CLI_DESIGN_GUIDELINES.md  CLOSE_COMMAND_IMPLEMENTATION.md  CODE_SEARCH_CHECKLIST.md  CODE_SEARCH_DESIGN.md  CODE_SEARCH_IMPLEMENTATION_PLAN.md  CODE_SEARCH_TEST_SPECS.md  COMMAND_STRUCTURE_REFACTOR.md  COMPILATION_FIX_PLAN.md  CONTINUED_CONVERSATION_MODES_IMPLEMENTATION_PLAN.md  CONVERSATION_MODES_COMPLETE.md  CONVERSATION_MODES_INTEGRATION_COMPLETE.md  CONVERSATION_MODES_INTEGRATION_FIXED.md  CONVERSATION_MODES_INTEGRATION_PLAN.md  CONVERSATION_SWAP_REMOVED.md  COORDINATOR_SYSTEM_ACTIVATION.md  (+246 more)
.q-commands/: test.json
.q-skills/: code-inline-test.json  code-reviewer.json  code-session-test.json  conversation-test.json  file-lister.json  greeter.json  interactive-test.json  manual-test.json  newtesting.json  prompt-inline-test.json  repl-test.json  (+23 more)
crates/cortex-memory/: Cargo.toml
crates/cortex-memory/benches/: memory_benchmark.rs
crates/cortex-memory/src/: circuit_breaker.rs  config.rs  embedder.rs  error.rs  feedback.rs  hnsw_wrapper.rs  id_mapper.rs  lib.rs  ltm.rs  memory_manager.rs  memory_note.rs  qcli_api.rs  stm.rs
crates/cortex-memory/tests/: evaluation.rs  python_comparison.rs
crates/cortex-memory/tests/fixtures/: ltm_fixtures.json  manager_fixtures.json  stm_fixtures.json
(+686 files in other folders)
