[package]
name = "cortex-memory"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
hnswlib = { version = "0.8.2", git = "https://github.com/chroma-core/hnswlib.git", branch = "master" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
semantic_search_client = { path = "../semantic-search-client" }

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true

